--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,4 @@
 # Backend Environment Variables
 PORT=5000
 NODE_ENV=development
+MONGODB_URL = mongodb+srv://sanjuk11022006:sanju1102@flow-xpense.d6khguq.mongodb.net/
