--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon -r dotenv/config.js src/index.js --experimental-json-modules"
+    "start": "node src/index.js",
+    "dev": "nodemon -r dotenv/config src/index.js"
   },
   "keywords": [
     "expense",
@@ -20,6 +20,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.0.0",
+    "nodemon": "^3.1.10"
   }
 }
