--- a/Backend/.env
+++ b/Backend/.env
@@ -2,3 +2,14 @@
 PORT=5000
 NODE_ENV=development
 MONGODB_URL = mongodb+srv://sanjuk11022006:sanju1102@flow-xpense.d6khguq.mongodb.net/
+
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+
+# Email Configuration (Gmail example)
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-password
+APP_NAME=FlowXpense
+
+# Frontend URL for password reset links
+FRONTEND_URL=http://localhost:3000
