--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,4 +1,8 @@
 # Frontend Environment Variables
-VITE_API_BASE_URL=http://localhost:5000/api
-VITE_APP_NAME="Career Path"
+
+# API Configuration
+VITE_API_URL=http://localhost:5000/api
+
+# App Configuration
+VITE_APP_NAME=FlowXpense
 VITE_APP_VERSION=1.0.0
